# thrust-mixing-saturation-lqr

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: lqr.hpp  simple_pid.hpp
params/: firmware_params.yaml  lqr_params.yaml
scripts/: compute_rotor_thrust_constants.py  solve_LQR.py
src/: lqr.cpp  rc_transcription.cpp  simple_pid.cpp  trajectory_follower_transcription.cpp
